--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://taargaryen.github.io/TODOLIST",
+  "homepage": "http://taargaryen.github.io/TODOLIST",
   "name": "todoapp",
   "version": "0.1.0",
   "private": true,
